src/test/ui/proc-macro/proc-macro-attributes.stderr
error[E0658]: The attribute `C` is currently unknown to the compiler and may have meaning added to it in the future (see issue #29642)
  --> $DIR/proc-macro-attributes.rs:7:3
   |
LL | #[C] //~ ERROR attribute `C` is currently unknown to the compiler
   |   ^
   |
   = help: add #![feature(custom_attribute)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
